aicoe-tap-infrastructure-10-16-2023/ansible/files/grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: grafana
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/istio-ingressgateway #kubeflow/kubeflow-gateway
  http:
  - match:
    - uri:
        prefix: /grafana/
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: prometheus-grafana.grafana.svc.cluster.local
